--- a/monitor/app/templates/base.html
+++ b/monitor/app/templates/base.html
@@ -19,6 +19,10 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">设置系统</a>
             </div>
+            <ul class="nav navbar-nav">
+              <li class="{{ root_active }}"><a href="/">首页</a></li>
+              <li class="{{ group_list_active }}"><a href="{{ url_for('main.host_group_list') }}">主机组</a></li>
+            </ul>
         </div>
     </nav>
     {% for message in get_flashed_messages() %}
