--- a/monitor/app/templates/vm_group_list.html
+++ b/monitor/app/templates/vm_group_list.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h3>主机组列表</h3>
+<h3>虚拟机组列表</h3>
+<button type="button" class="btn btn-default"><a href="{{ url_for('main.refresh_vm') }}"> 刷新虚拟机 </a></button>
+
 <hr>
 <div>
 {% for group in groups %}
     <div>
-        <h4><a href="{{ url_for('main.host_group_detail', group_id=group.id) }}">
+        <h4><a href="{{ url_for('main.vm_group_detail', group_id=group.id) }}">
             {{- group.name }}</a></h4>
         <div>共{{ group.machines | length }}台主机</div>
         <div>{{ group.desc }}</div>
@@ -14,15 +16,15 @@
     <hr>
 {% endfor %}
 </div>
-<form class="form-horizontal " role="form" method="post" action="{{ url_for('main.add_group') }}">
+<form class="form-horizontal " role="form" method="post" action="{{ url_for('main.add_vm_group') }}">
     <div class="form-group">
-        <label class="col-sm-4 col-lg-offset-2 col-lg-2 control-label">主机组名</label>
+        <label class="col-sm-4 col-lg-offset-2 col-lg-2 control-label">虚拟机组名</label>
         <div class="col-sm-8 col-lg-4">
             {{ form.name(class='form-control', required='') }}
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-4 col-lg-offset-2 col-lg-2 control-label">主机组描述</label>
+        <label class="col-sm-4 col-lg-offset-2 col-lg-2 control-label">虚拟机组描述</label>
         <div class="col-sm-8 col-lg-4">
             {{ form.desc(class='form-control', required='') }}
         </div>
@@ -30,7 +32,7 @@
     {{ form.csrf_token(type='hidden') }}
     <div class="form-group">
         <div class="col-sm-12 col-lg-offset-3 col-lg-5 text-center">
-            <button type="submit" class="btn btn-info"> 添加主机组 </button>
+            <button type="submit" class="btn btn-info"> 添加虚拟机组 </button>
         </div>
     </div>
 </form>
