--- a/monitor/app/templates/base.html
+++ b/monitor/app/templates/base.html
@@ -23,6 +23,7 @@
                 <li class="{{ root_active }}"><a href="/">首页</a></li>
                 <li class="{{ group_list_active }}"><a href="{{ url_for('main.host_group_list') }}">主机组</a></li>
                 <li class="{{ vm_list_active }}"><a href="{{ url_for('main.vm_group_list') }}">虚拟机</a></li>
+                <li class="{{ vm_list_active }}"><a href="{{ url_for('main.alarm_list') }}">告警</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ 'http://%s:3000' % LOCAL_IP }}">仪表盘</a></li>
