--- a/monitor/app/templates/host_group_detail.html
+++ b/monitor/app/templates/host_group_detail.html
@@ -110,7 +110,7 @@
     </div>
 </div>
 <div class="modal fade" id="move_group_modal">
-    <input id="group_list" value="{{ group_list | join(',', attribute='name') }}">
+    <input id="group_list" value="{{ group_list | join(',', attribute='name') }}"  type="hidden">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -134,24 +134,50 @@
                 <h4 class="modal-title">监控项目</h4>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal" role="form" id="group_service_form">
+                <table class="table table-bordered table-hover" id="group_service_form">
+                    <thead>
+                    <tr>
+                        <th>服务</th><th>warning阀值</th><th>critical阀值</th>
+                    </tr>
+                    </thead>
+                    <tbody id="service_form">
                     {% for service in selected_services %}
-                    <div class="checkbox">
-                        <label class="monitor_item_name">
-                            <input type="checkbox" checked>
-                            {{ service.name }}
-                        </label>
-                    </div>
+                    <tr>
+                        <td>
+                            <div class="checkbox">
+                                <label class="monitor_item_name">
+                                    <input type="checkbox" checked>
+                                    {{ service.name }}
+                                </label>
+                            </div>
+                        </td>
+                        <td><input class="form-control item-warn" placeholder="无"
+                                   {%- if service.warn is not none %}{{ 'value=%s' % service.warn }}{% endif %}>
+                        </td>
+                        <td><input class="form-control item-critic" placeholder="无"
+                                   {%- if service.critic is not none %}{{ 'value=%s' % service.critic }}{% endif %}>
+                        </td>
+                    </tr>
                     {% endfor %}
                     {% for service in left_services %}
-                    <div class="checkbox">
-                        <label class="monitor_item_name">
-                            <input type="checkbox">
-                            {{ service.name }}
-                        </label>
-                    </div>
+                    <tr>
+                        <td>
+                            <div class="checkbox">
+                            <label class="monitor_item_name">
+                                <input type="checkbox">
+                                {{ service.name }}
+                            </label>
+                        </div>
+                        </td>
+                        <td><input class="form-control item-warn" placeholder="无">
+                        </td>
+                        <td><input class="form-control item-critic" placeholder="无">
+                        </td>
+                    </tr>
+
                     {% endfor %}
-                </form>
+                    </tbody>
+                </table>
                 <input type="hidden" id="service_group_id" value="{{ group.id }}">
             </div>
             <div class="modal-footer">
