--- a/monitor/app/templates/vm_group_list.html
+++ b/monitor/app/templates/vm_group_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h3>虚拟机组列表</h3>
-<button type="button" class="btn btn-default"><a href="{{ url_for('main.refresh_vm') }}"> 刷新虚拟机 </a></button>
+<a href="{{ url_for('main.refresh_vm') }}"> 刷新虚拟机 </a>
 
 <hr>
 <div>
@@ -10,8 +10,9 @@
     <div>
         <h4><a href="{{ url_for('main.vm_group_detail', group_id=group.id) }}">
             {{- group.name }}</a></h4>
-        <div>共{{ group.machines | length }}台主机</div>
+        <div>共{{ group.machines | length }}台虚拟机</div>
         <div>{{ group.desc }}</div>
+        <button type="button" class="btn btn-danger delete-group" group_id="{{ group.id }}">删除主机组</button>
     </div>
     <hr>
 {% endfor %}
@@ -36,4 +37,9 @@
         </div>
     </div>
 </form>
+{% endblock %}
+
+{% block footer_scripts %}
+    {{ super() }}
+    <script src="{{ url_for('static', filename='js/root.js') }}"></script>
 {% endblock %}
