--- a/monitor/app/templates/base.html
+++ b/monitor/app/templates/base.html
@@ -29,7 +29,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ 'http://%s:3000' % LOCAL_IP }}">仪表盘</a></li>
                 <li><a href="{{ 'http://%s/nagios3' % LOCAL_IP }}">Nagios</a></li>
-                <li><a href="{{ 'http://%s/graphite' % LOCAL_IP }}">graphite</a></li>
+                <li><a href="{{ 'http://%s:8008' % LOCAL_IP }}">graphite</a></li>
                 <li><a href="{{ 'http://%s/ganglia' % LOCAL_IP }}">ganglia</a></li>
             </ul>
         </div>
