--- a/monitor/app/templates/host_group_detail.html
+++ b/monitor/app/templates/host_group_detail.html
@@ -49,7 +49,7 @@
         <button type="button" class="btn btn-primary" id="add_multiple_host">批量添加主机</button>
         <button type="button" class="btn btn-primary" id="config_all_host">所有主机部署监控Agent</button>
         <button type="button" class="btn btn-primary" id="show_group_service">主机组服务</button>
-        <button type="button" class="btn btn-primary" id="sync">同步配置到Nagios</button>
+        <button type="button" class="btn btn-primary" id="sync">同步配置</button>
     </div>
 </div>
 {% endblock %}
