--- a/monitor/app/templates/root.html
+++ b/monitor/app/templates/root.html
@@ -45,7 +45,7 @@
 </div>
 <div class="col-md-offset-4 col-md-3 text-center">
     <button type="button" class="btn btn-info" id="add_host">添加主机</button>
-    <button type="button" class="btn btn-info" id="sync">同步配置到Nagios</button>
+    <button type="button" class="btn btn-info" id="sync">同步配置</button>
 </div>
 {% endblock %}
 
