--- a/monitor/app/templates/vm_group_detail.html
+++ b/monitor/app/templates/vm_group_detail.html
@@ -33,7 +33,7 @@
 <div>
     <div class="col-md-offset-3 col-md-6 text-center">
         <button type="button" class="btn btn-primary" id="show_group_service">虚拟机组服务</button>
-        <button type="button" class="btn btn-primary" id="sync">同步配置到Nagios</button>
+        <button type="button" class="btn btn-primary" id="sync">同步配置</button>
     </div>
 </div>
 {% endblock %}
